Fixed broken wrapping in main timetable

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -324,10 +324,10 @@ timetable, timetable-mini {
 
       // Padding between bookings in a clashgroup
       td {
-        padding-right: 5%;
+        padding-right: 2.5%;
 
         &:first-of-type {
-          padding-left: 5%;
+          padding-left: 2.5%;
         }
         &:last-of-type {
           padding-right: 5%;
@@ -340,8 +340,8 @@ timetable, timetable-mini {
 
         .glyphicon-lock {
           float: right;
-          margin: 0.5em 0.5em 0.5em 1em;
-          font-size: 0.8em;
+          margin: 0.4em;
+          font-size: 0.7em;
         }
 
         p {
